chat overflow on main container is scroll + fix in signup page with covering background images

--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -4,14 +4,9 @@
     box-sizing: border-box;
 }
 
-html,body {
-    height: 100%;
-    overflow: hidden;
-}
-
 body {
-    margin: 0 auto;
-    padding: 0;
+    /*margin: 0 auto;*/
+    /*padding: 0;*/
     font-weight: 400;
     font-size: 1rem;
     line-height: 1.58;
@@ -130,7 +125,8 @@ button.accent {
 
 #chat-page {
     position: relative;
-    height: 100%;
+    height: 800px;
+    overflow: hidden;
 }
 
 .chat-container {
@@ -140,7 +136,7 @@ button.accent {
     background-color: #fff;
     box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
     margin-top: 30px;
-    height: calc(100% - 60px);
+    height: 600px;
     max-height: 600px;
     position: relative;
 }
